# BallotVision

./: README.md  process_files.py  pyproject.toml  requirements-common.txt  requirements.txt  requirements_noavx.txt  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  run_ocr.yml
src/ballot_vision/core/: models.py
src/ballot_vision/ocr/: base.py  paddle_engine.py
src/ballot_vision/validation/: rules.py
tests/: conftest.py  test_environment.py  test_ocr.py  test_validation.py
